--- a/package.json
+++ b/package.json
@@ -29,18 +29,37 @@
   },
   "private": true,
   "dependencies": {
-    "@nrwl/angular": "9.0.4",
-    "@angular/animations": "9.0.0",
-    "@angular/common": "9.0.0",
-    "@angular/compiler": "9.0.0",
-    "@angular/core": "9.0.0",
-    "@angular/forms": "9.0.0",
-    "@angular/platform-browser": "9.0.0",
-    "@angular/platform-browser-dynamic": "9.0.0",
-    "@angular/router": "9.0.0",
-    "core-js": "^2.5.4",
-    "rxjs": "~6.5.0",
-    "zone.js": "^0.10.2"
+    "@angular/animations": "~9.0.0",
+    "@angular/cdk": "~9.0.0",
+    "@angular/common": "~9.0.0",
+    "@angular/compiler": "~9.0.0",
+    "@angular/core": "~9.0.0",
+    "@angular/flex-layout": "~9.0.0-beta.29",
+    "@angular/forms": "~9.0.0",
+    "@angular/material": "~9.0.0",
+    "@angular/platform-browser": "~9.0.0",
+    "@angular/platform-browser-dynamic": "~9.0.0",
+    "@angular/pwa": "^0.900.1",
+    "@angular/router": "~9.0.0",
+    "@angular/service-worker": "~9.0.0",
+    "@fullcalendar/core": "^4.3.1",
+    "@ngrx/effects": "^8.6.0",
+    "@ngrx/entity": "^8.6.0",
+    "@ngrx/router-store": "^8.6.0",
+    "@ngrx/store": "^8.6.0",
+    "@ngrx/store-devtools": "^8.6.0",
+    "@nrwl/angular": "8.12.2",
+    "@nrwl/workspace": "^8.12.2",
+    "chart.js": "^2.9.3",
+    "hammerjs": "^2.0.8",
+    "primeflex": "^1.0.0",
+    "primeicons": "^2.0.0",
+    "primeng": "^9.0.0",
+    "quill": "^1.3.7",
+    "rxjs": "~6.5.4",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2",
+    "ngx-cookie-service": "^2.2.0"
   },
   "devDependencies": {
     "@angular/cli": "9.0.1",
